/***********************************************************************
* Copyright (c) 2013-2020 Commonwealth Computer Research, Inc.
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Apache License, Version 2.0
* which accompanies this distribution and is available at
* https://www.apache.org/licenses/LICENSE-2.0
 ***********************************************************************/

// Execute : protoc --java_out=./geomesa-hbase/geomesa-hbase-rpc/src/main/java ./geomesa-hbase/geomesa-hbase-rpc/src/main/protobuf/GeoMesaProtoGenerator.proto
syntax = "proto2";

option java_package = "org.locationtech.geomesa.hbase.proto";
option java_outer_classname = "GeoMesaProto";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message GeoMesaCoprocessorRequest {
    required bytes options = 1;
    required int32 version = 2;
}

message GeoMesaCoprocessorResponse {
    repeated bytes payload = 1;
    optional bytes lastScanned = 2;
    optional int32 version = 3;
}

service GeoMesaCoprocessorService {
  rpc getResult(GeoMesaCoprocessorRequest)
    returns (GeoMesaCoprocessorResponse);
}
